--- a/.github/workflows/build-test-image.yml
+++ b/.github/workflows/build-test-image.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: mrparkers/keycloak-dev:${{ matrix.keycloak-version }}
+          tags: darrenv/keycloak-dev:${{ matrix.keycloak-version }}
           file: test/Dockerfile
           build-args: |
             KEYCLOAK_VERSION=${{ matrix.keycloak-version }}
