--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,66 +1,51 @@
+# This GitHub action can publish assets for release when a tag is created.
+# Currently its setup to run on any tag that matches the pattern "v*" (ie. v0.1.0).
+#
+# This uses an action (crazy-max/ghaction-import-gpg) that assumes you set your
+# private key in the `GPG_PRIVATE_KEY` secret and passphrase in the `PASSPHRASE`
+# secret. If you would rather own your own GPG handling, please fork this action
+# or use an alternative one for key handling.
+#
+# You will need to pass the `--batch` flag to `gpg` in your signing step 
+# in `goreleaser` to indicate this is being used in a non-interactive mode.
+#
 name: release
 on:
   push:
     tags:
-      - "v*"
-
+      - 'v*'
+permissions:
+  contents: write
 jobs:
-  wait:
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    name: Wait for acceptance tests
-    steps:
-      - name: Wait for acceptance tests
-        id: wait
-        uses: "WyriHaximus/github-action-wait-for-status@v1.4.0"
-        with:
-          ignoreActions: Wait for acceptance tests
-          checkInterval: 30
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    outputs:
-      status: steps.wait.outputs.status
-
-  release:
-    needs:
-      - wait
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      -
+        name: Checkout
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      -
+        name: Unshallow
+        run: git fetch --prune --unshallow
+      -
+        name: Set up Go
+        uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
         with:
           go-version-file: 'go.mod'
           cache: true
-
-      - name: Import GPG key
+      -
+        name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@111c56156bcc6918c056dbef52164cfa583dc549 # v5.2.0
         id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v2
-        env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-
-      - name: Get tag name
-        id: get_tag_name
-        run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
-
-      - name: Build release notes link
-        id: build-release-notes
-        run: |
-          releaseDate=$(date '+%B-%-d-%Y' | tr '[:upper:]' '[:lower:]')
-          releaseVersion=$(echo ${{ steps.get_tag_name.outputs.TAG }} | tr -d '.')
-          tmp=$(mktemp -d)
-          echo "[Release Notes](https://github.com/mrparkers/terraform-provider-keycloak/blob/master/CHANGELOG.md#${releaseVersion}-${releaseDate})" > ${tmp}/release-notes.md
-          cat ${tmp}/release-notes.md
-          echo ::set-output name=NOTES::${tmp}/release-notes.md
-
-      - name: GoReleaser
-        uses: goreleaser/goreleaser-action@v2
         with:
-          version: v0.179.0
-          args: release --rm-dist --release-notes=${{ steps.build-release-notes.outputs.NOTES }}
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@f82d6c1c344bcacabba2c841718984797f664a6b # v4.2.0
+        with:
+          version: latest
+          args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
+          # GitHub sets this automatically
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
