--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,119 +1,102 @@
-name: test
+# This GitHub action runs your tests for each commit push and/or PR. Optionally
+# you can turn it on using a cron schedule for regular testing.
+#
+name: Tests
 on:
-  push:
-    branches:
-      - master
   pull_request:
-    branches:
-      - master
-
+    paths-ignore:
+      - 'README.md'
+  push:
+    paths-ignore:
+      - 'README.md'
+  # For systems with an upstream API that could drift unexpectedly (like most SaaS systems, etc.),
+  # we recommend testing at a regular interval not necessarily tied to code changes. This will 
+  # ensure you are alerted to something breaking due to an API change, even if the code did not
+  # change.
+  # schedule:
+  #   - cron: '0 13 * * *'
 jobs:
-  verify:
+  # ensure the code builds...
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+
+    - name: Set up Go
+      uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
+      with:
+        go-version-file: 'go.mod'
+        cache: true
+      id: go
+
+    - name: Get dependencies
+      run: |
+        go mod download
+
+    - name: Build
+      run: |
+        go build -v .
+
+  generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 2 # we want the HEAD commit and the previous commit to compare changed files
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
         with:
           go-version-file: 'go.mod'
           cache: true
-
-      - name: Verify
+      - run: go generate ./...
+      - name: git diff
         run: |
-          go mod download
-          make vet
-          make fmtcheck
+          git diff --compact-summary --exit-code || \
+            (echo; echo "Unexpected difference in directories after code generation. Run 'go generate ./...' command and commit."; exit 1)
 
-      # we only want to run tests if any code changes (not for README or docs changes)
-      - name: Check Changed Files
-        id: files
-        uses: tj-actions/changed-files@v1.1.3
-        with:
-          files: |
-            .github
-            go.mod
-            go.sum
-            main.go
-            keycloak
-            provider
-            scripts
-
-    outputs:
-      code-files-changed: steps.files.outputs.any_changed
-
-  acceptance:
-    # this conditional is more verbose than I'd like it to be
-    # https://github.com/actions/runner/issues/491
-    if: |
-      always() &&
-      !cancelled() &&
-      !contains(needs.verify.result, 'failure') &&
-      !contains(needs.verify.result, 'cancelled') &&
-      (needs.verify.outputs.code-files-changed || startsWith(github.ref, 'refs/tags/v'))
-    needs:
-      - verify
+  # run acceptance tests in a matrix with Terraform core versions
+  test:
+    name: Matrix Test
+    needs: build
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     strategy:
-      matrix:
-        keycloak-version:
-          - '21.0.1'
       fail-fast: false
-    concurrency:
-      group: ${{ github.head_ref || github.run_id }}-${{ matrix.keycloak-version }}
-      cancel-in-progress: true
-    services:
-      keycloak:
-        # we have to use a custom docker image for these tests, since it's not possible to provide command-line args
-        # to a service container.  see https://github.com/actions/runner/issues/2139
-        image: darrenv/keycloak-dev:${{ matrix.keycloak-version }}
-        ports:
-          - 8080:8080
-        env:
-          KC_DB: dev-mem
-          KC_LOG_LEVEL: INFO
-          KEYCLOAK_ADMIN: keycloak
-          KEYCLOAK_ADMIN_PASSWORD: password
+      matrix:
+        # list whatever Terraform versions here you would like to support
+        terraform:
+          - '1.2.*'
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version-file: 'go.mod'
-          cache: true
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_wrapper: false
-          terraform_version: 1.4.1
+    - name: Set up Go
+      uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
+      with:
+        go-version-file: 'go.mod'
+        cache: true
+      id: go
 
-      - name: Initialize Keycloak
-        run: ./scripts/wait-for-local-keycloak.sh && ./scripts/create-terraform-client.sh
+    - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
+      with:
+        terraform_version: ${{ matrix.terraform }}
+        terraform_wrapper: false
 
-      - name: Get Keycloak Version
-        uses: actions/github-script@v6
-        id: keycloak-version
-        env:
-          KEYCLOAK_VERSION: ${{ matrix.keycloak-version }}
-        with:
-          script: |
-            return process.env.KEYCLOAK_VERSION.split("-")[0]
-      - name: Test
-        run: |
-          go mod download
-          make testacc
-        env:
-          KEYCLOAK_CLIENT_ID: terraform
-          KEYCLOAK_CLIENT_SECRET: 884e0f95-0f42-4a63-9b1f-94274655669e
-          KEYCLOAK_CLIENT_TIMEOUT: 30
-          KEYCLOAK_REALM: master
-          KEYCLOAK_URL: "http://localhost:8080"
-          KEYCLOAK_TEST_PASSWORD_GRANT: "true"
-          KEYCLOAK_VERSION: ${{ steps.keycloak-version.outputs.result }}
-        timeout-minutes: 60
+    - name: Get dependencies
+      run: |
+        go mod download
+        
+    - name: TF acceptance tests
+      timeout-minutes: 10
+      env:
+        TF_ACC: "1"
+
+        # Set whatever additional acceptance test env vars here. You can
+        # optionally use data from your repository secrets using the
+        # following syntax:
+        # SOME_VAR: ${{ secrets.SOME_VAR }}
+
+      run: |
+        go test -v -cover ./internal/provider/
